--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.9",
     "expo": "^52.0.16",
     "expo-constants": "~17.0.2",
+    "expo-dev-client": "^5.0.8",
     "expo-font": "^13.0.2",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.2",
