--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "expo": "^52.0.16",
-    "expo-constants": "~17.0.2",
-    "expo-dev-client": "^5.0.8",
-    "expo-font": "^13.0.2",
-    "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.2",
-    "expo-splash-screen": "~0.29.7",
+    "expo": "^52.0.23",
+    "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.8",
+    "expo-font": "~13.0.2",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.15",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
